clean up deprecation warnings